--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="left-nav">left nav</div>
+        <div class="middle-nav">middle nav</div>
+        <div class="right-nav">right nav</div>
+    </nav>
 </body>
 </html>
