adding script.js and vid folder

--- a/index.html
+++ b/index.html
@@ -3,14 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Video Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <div class="left-nav">left nav</div>
-        <div class="middle-nav">middle nav</div>
-        <div class="right-nav">right nav</div>
-    </nav>
+    <div class="container">
+        <h1>Title of the videos</h1>
+        <div class="main-content">
+            <div class="main-vid">
+                <video src="vid/1. Intro to JSON.mp4" controls autoplay muted></video>
+                <h3 class="title">title of the video1</h3>
+            </div>
+            <div class="vid-playlist">
+                <div class="vid active">
+                    <video src="vid/1. Intro to JSON.mp4"></video>
+                    <h3 class="title">title of the video1</h3>
+                </div>
+                <div class="vid">
+                    <video src="vid/1. Intro to JSON.mp4"></video>
+                    <h3 class="title">title of the video2</h3>
+                </div>
+                <div class="vid">
+                    <video src="vid/1. Intro to JSON.mp4"></video>
+                    <h3 class="title">title of the video3</h3>
+                </div>
+                <div class="vid">
+                    <video src="vid/1. Intro to JSON.mp4"></video>
+                    <h3 class="title">title of the video4</h3>
+                </div>
+                <div class="vid">
+                    <video src="vid/1. Intro to JSON.mp4"></video>
+                    <h3 class="title">title of the video5</h3>
+                </div>
+                <div class="vid">
+                    <video src="vid/1. Intro to JSON.mp4"></video>
+                    <h3 class="title">title of the video6</h3>
+                </div>
+                <div class="vid">
+                    <video src="vid/1. Intro to JSON.mp4"></video>
+                    <h3 class="title">title of the video7</h3>
+                </div>
+                <div class="vid">
+                    <video src="vid/1. Intro to JSON.mp4"></video>
+                    <h3 class="title">title of the video8</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
